tests/fail/cast_unrelated_structs/test.yap
struct Point { i32 x, i32 y }
struct Line { i32 a, i32 b }
fn main() {
    Point p = [1, 2];
    Line l = p.(Line);
}
